pay load is almost complete for ticket creation

--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
@@ -1,1 +1,6 @@
-<p>create-ticket works!</p>
+<h1>
+    CREATE TICKET
+</h1>
+<button (click)="createTicket()">Create</button>
+<button (click)="getTicket()">Get</button>
+<button (click)="getUser()">Get User</button>
