--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
@@ -1,6 +1,52 @@
-<h1>
-    CREATE TICKET
-</h1>
-<button (click)="createTicket()">Create</button>
-<button (click)="getTicket()">Get</button>
-<button (click)="getUser()">Get User</button>
+<head>
+    <!-- bootstrap and bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+</head>
+
+<div class="create-ticket-form">
+    <div class="Title"> <h2>New Zendesk Ticket</h2></div>
+    <form method="post" #createTicketForm="ngForm" (ngSubmit)="createTicket()">
+
+        <div class="container m-auto p-5 w-70">
+            <div class="row">
+                <div class="col col-6">
+                    <label for="subject" class="form-label">Subject</label>
+                </div>
+                <div class="col col-6">{{subject}}</div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input type="text" name="subject" class="form-control" 
+                    placeholder="subject of the ticket" [(ngModel)]="subject" autocomplete="nope" required>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col col-6">
+                    <label for="description" class="form-label">Description</label>
+                </div>
+                <div class="col col-6">{{description}}</div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <textarea  name="description" class="form-control" 
+                    placeholder="describe the scenario" [(ngModel)]="description" autocomplete="nope" required>
+                    </textarea>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end my-2">
+            <button [disabled]="!createTicketForm.form.valid" type="submit" class="btn btn-md btn-secondary" (click)="createTicket()">Create Ticket</button>
+            </div>
+        </div>
+    </form>
+    <button (click)="createTicket()">Create</button>
+    <button (click)="getTicket()">Get</button>
+    <button (click)="getUser()">Get User</button>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+</div>
