--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
@@ -35,6 +35,13 @@
                     </textarea>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <label  class="form-label">Priority</label>
+                    <app-priority-slider></app-priority-slider>
+                      
+                </div>
+            </div>
 
             <div class="d-flex justify-content-end my-2">
             <button [disabled]="!createTicketForm.form.valid" type="submit" class="btn btn-md btn-secondary" (click)="createTicket()">Create Ticket</button>
