tags-selector component is complete

--- a/src/app/ticketManagementComponents/priority-slider/priority-slider.component.html
+++ b/src/app/ticketManagementComponents/priority-slider/priority-slider.component.html
@@ -19,7 +19,7 @@
         <div class="radio-button">
             <input type="radio" name="slider" id="high" [checked]="priority==='high'" (click)="setPriority('high')">
             <label for="high"></label>
-            <div class="radio-label">high</div>
+            <div class="radio-label">High</div>
         </div>
         <hr class="divider">
 
