--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col">
                     <input type="text" name="subject" class="form-control" 
-                    placeholder="subject of the ticket" [(ngModel)]="subject" autocomplete="nope" required>
+                    placeholder="Subject of the ticket" [(ngModel)]="subject" autocomplete="nope" required>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col">
                     <textarea  name="description" class="form-control" 
-                    placeholder="describe the scenario" [(ngModel)]="description" autocomplete="nope" required>
+                    placeholder="Describe the scenario" [(ngModel)]="description" autocomplete="nope" required>
                     </textarea>
                 </div>
             </div>
@@ -51,6 +51,16 @@
             <div class="row">
                 <app-type-selector (typeSelectEvent)="setType($event)"></app-type-selector>
             </div>
+
+            <div class="row">
+                <div class="col col-6"><label class="form-label label">Tags</label></div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <app-tags-selector (tagsSelectEvent)="setTag($event)"></app-tags-selector>
+                </div>
+            </div>
+
             <div class="d-flex justify-content-end my-2">
             <button [disabled]="!createTicketForm.form.valid" type="submit" class="btn btn-md btn-secondary" (click)="createTicket()">Create Ticket</button>
             </div>
