media query to adjust width of form

--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.css
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.css
@@ -1,3 +1,14 @@
+.Title{
+    text-align: center;
+}
 .label{
     font-weight: bolder;
+}
+.create-ticket-form{
+    width: 50%;
+}
+@media (max-width: 767px) {
+    .create-ticket-form {
+      width: 100%; /* Adjust width for smaller screens */
+    }
 }
