--- a/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
+++ b/src/app/ticketManagementComponents/create-ticket/create-ticket.component.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
-<div class="create-ticket-form">
+<div class="create-ticket-form m-auto ">
     <div class="Title"> <h2>New Zendesk Ticket</h2></div>
     <form method="post" #createTicketForm="ngForm" (ngSubmit)="createTicket()">
 
