--- a/src/app/ticketManagementComponents/type-selector/type-selector.component.css
+++ b/src/app/ticketManagementComponents/type-selector/type-selector.component.css
@@ -1,10 +1,11 @@
 .type-btn{
-    border: 1px solid black;
+    border: 0.5px solid black;
     border-radius: 5px;
 }
 .type-btn:hover{
     border-color: blue;
-    border-width: 2px;
+    border-width: 1px;
+    border-bottom: 2px solid blueviolet;
 }
 .type-idle{
     background-color: white;
